# downlink-service

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  settings.toml
.github/scripts/: make_debian.sh  packagecloud_upload.sh
.github/workflows/: CI.yml  ECRPush.yml  build.yaml  rust.yml
deb/: downlink_service-postinst  downlink_service-postrm  downlink_service-preinst  downlink_service.service
examples/: hpr_client.rs  http_client.rs
pkg/: settings-template.toml
src/: main.rs  settings.rs
tests/: integration.rs
