[package]
name = "downlink-service"
version = "0.1.0"
edition = "2021"
default-run="main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tonic = "0.8.3"
tokio-stream = "0.1.11"
serde_json = "1.0.89"
log = "0.4.0"
env_logger = "0.9.0"
anyhow = "1.0.66"
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
helium-proto = { git = "https://github.com/helium/proto", branch="macpie/session_key_filter", features=["services"]}
helium-crypto = { git = "http://github.com/helium/helium-crypto-rs", tag="v0.5.0"}

