[package]
name = "downlink_service"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hpr_client"
crate-type = ["bin"]

[[example]]
name = "http_client"
crate-type = ["bin"]


[dependencies]
axum = "0.6.1"
tonic = "0.8.3"
tokio-stream = "0.1.11"
serde_json = "1.0.89"
log = "0.4.0"
anyhow = "1.0.66"
rand = "0.8.5"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
config = {version="0", default-features=false, features=["toml"]}
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
helium-proto = { git = "https://github.com/helium/proto", branch="macpie/signer", features=["services"]}
helium-crypto = { git = "http://github.com/helium/helium-crypto-rs", tag="v0.5.0"}
clap = { version = "4.0.32", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
