[package]
name = "downlink_service"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hpr_client"
crate-type = ["bin"]

[[example]]
name = "http_client"
crate-type = ["bin"]


[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
helium-crypto = { git = "http://github.com/helium/helium-crypto-rs", tag = "v0.11.0" }
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = ["services"] }
log = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
# rand is pinned to 0.8 to stay compatible with helium-crypto v0.11.0 (rand_core 0.6).
rand = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "fmt"] }
